k8s/dev/tgb.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-payment-gateway-dev-payment-gateway
  namespace: envoy-gateway-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/managed-by: envoy-gateway
    app.kubernetes.io/name: envoy
    gateway.envoyproxy.io/owning-gateway-name: payment-gateway
    gateway.envoyproxy.io/owning-gateway-namespace: payment-gateway-dev
  ports:
    - name: http-80
      port: 80
      protocol: TCP
      targetPort: 10080
